# endoExplain

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: project.yaml
configs/classification/: convnext_tiny_real.yaml  efficientnet_b0_reference.yaml
configs/evaluation/: temporal_benchmark_v01_events.csv  temporal_benchmark_v01_videos.csv
configs/experiments/: excellence_sweep.yaml
configs/segmentation/: unetpp_effb1_384_recall.yaml
docs/: EXPERIMENTS.md  REPRODUCIBILITY.md  RESULTS_REFERENCE.md
scripts/: 00_check_environment.py  01_index_hyperkvasir.py  01b_index_segmentation.py  02_train_classifier.py  03_train_segmenter.py  04_run_explainability.py  05_extract_video_frames.py  06_run_temporal_review.py  07_render_demo_video.py  08_run_segmentation_experiment.py  09_export_segmentation_predictions.py  10_compare_segmentation_runs.py  11_select_segmentation_champion.py  12_compare_xai_runs.py  13_run_classification_experiment.py  14_export_classifier_predictions.py  15_compare_classifier_runs.py  16_run_registered_training.py  17_select_classifier_champion.py  18_export_quality_strata.py  19_run_temporal_benchmark.py  20_bootstrap_metric_intervals.py
src/endoexplain/: __init__.py  clinical_targets.py
src/endoexplain/config/: __init__.py  paths.py  project.py  settings.py
tests/: test_clinical_targets.py  test_evaluation_bootstrap.py  test_heatmap_metrics.py  test_overlay_renderer.py  test_quality_strata.py  test_split_dataset.py  test_temporal_benchmark.py  test_temporal_events.py
(+35 files in other folders)
