[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endoexplain"
version = "0.1.0"
description = "Explainability cockpit for AI-assisted gastrointestinal endoscopy review"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Roberto Alcaraz Machado", email = "eroberam@gmail.com" }]
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
